src/content/docs/zh/sdk/unity/v5/features/attribution.mdx
---
title: "获取归因信息"
description: "使用 Adjust SDK 监听归因变化"
slug: "en/sdk/unity/features/attribution"
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v4: "/en/sdk/unity/v4/features/attribution"
---
用户与 Adjust 链接交互时，其归因信息会发生更新。用户与[深度链接](https://help.adjust.com/en/article/deep-links)交互时可能会发生这种情况。用户归因相关信息会在 `AdjustAttribution` 类中展现。

AdjustAttribution 类属性\{\#adjustattribution\-class\-properties\}
--------------------------------------------------------------------

`AdjustAttribution` 类包含设备当前归因状态的细节。任何未针对用户填充的值都会返回 `null` 值。
<callout type="note"> 

只有在[您的 `AdjustConfig` 实例 `IsCostDataInAttributionEnabled` 属性](/en/sdk/android/configuration#enable-cost-data-sending)为 `true` 的情况下，才能访问下列值：

* `costType`
* `costAmount`
* `costCurrency`

</Callout> <callout type="tip"> 

要获取 Adjust 设备 ID，请使用 `Adjust.getAdid` 方法。更多详情，请参阅[获取设备信息](/en/sdk/android/features/device-info#adjust-device-identifier)。
</Callout> 

|          值          |   数据类型   |                                                  描述                                                   |
|---------------------|----------|-------------------------------------------------------------------------------------------------------|
| `trackerToken`      | `string` | 设备当前归因链接的识别码                                                                                          |
| `trackerName`       | `string` | 设备当前归因链接的名称                                                                                           |
| `network`           | `string` | 设备当前归因渠道的名称                                                                                           |
| `campaign`          | `string` | 设备当前归因推广活动的名称                                                                                         |
| `adgroup`           | `string` | 设备当前归因广告组的名称                                                                                          |
| `creative`          | `string` | 设备当前归因素材的名称                                                                                           |
| `clickLabel`        | `string` | 用于标记安装的[点击标签](https://help.adjust.com/en/article/user-rewards)                                        |
| `costType`          | `string` | 推广活动定价模型 \(如 cpi\)                                                                                  |
| `costAmount`        | `double` | 安装成本                                                                                                  |
| `costCurrency`      | `string` | 与成本关联的货币的 [3 字符 ISO 4217 代码](https://www.iban.com/currency-codes)。                                    |
| `fbInstallReferrer` | `string` | [Facebook install referrer](https://developers.facebook.com/docs/app-ads/install-referrer/)， *仅限安卓* 。 |

发生归因变化时触发函数\{\#trigger\-a\-function\-when\-attribution\-changes\}
-------------------------------------------------------------------------

<codeblock title="属性声明"> 

```cs
public Action<adjustattribution id="sl-md0000000"> AttributionChangedDelegate { get; set; }
```

</CodeBlock> 

SDK 可监听归因变更并在发现更新时调用一个函数。要配置您的回传函数，请将函数指定到`AdjustConfig`实例的 `AttributionChangedDelegate` 属性上。
<callout type="important"> 

您必须在应用中初始化 Adjust SDK **前** 设置该属性。
</Callout> <codeblock highlight="{range: 8}, {range: 13-16}"> 

```cs
using com.adjust.sdk;

public class ExampleGUI : MonoBehaviour {
   void OnGUI() {
      if (GUI.Button(new Rect(0, 0, Screen.width, Screen.height), "callback")) {
         AdjustConfig adjustConfig = new AdjustConfig("{Your App Token}", AdjustEnvironmentSandbox);
         adjustConfig.LogLevel = AdjustLogLevel.Verbose;
         adjustConfig.AttributionChangedDelegate = this.AttributionChangedDelegate;
         Adjust.InitSdk(adjustConfig);
      }
   }

   public void AttributionChangedDelegate(AdjustAttribution attribution) {
      Debug.Log("Attribution changed");
      // ...
   }
}
```

</CodeBlock> 

获取当前归因信息\{\#get\-current\-attribution\-information\}
----------------------------------------------------------

<codeblock title="方法签名"> 

```cs
public static void GetAttribution(Action<adjustattribution id="sl-md0000000"> callback)
```

</CodeBlock> 

用户安装您的应用时，Adjust 会将该安装归因至一个推广活动。Adjust SDK 可提供赢得安装归因的推广活动细节。要返回此信息，请调用`Adjust.GetAttribution`方法并传递回传函数。SDK 会异步调取归因信息，并将其作为`AdjustAttribution`对象传递至您的 completion handler。

```cs
Adjust.GetAttribution(attribution =>
{
    // use attribution
});
```

